Finished as per project requirement. Might comeback to fix the h1 overflow bug :D

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Etch A Sketch</title>
-  <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel = 'shortcut icon' type="image/jpeg" href="images/favicon.jpeg">
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-      <div id ='container'></div>
-      <script src="app.js"></script>
+    <h1>Etch a Sketch</h1>
+    <div id="button"><button>Set size</button></div>
+    <div id ='container'></div>
+    <script src="app.js"></script>
   </body>
 </html>
